<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorGrey"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite"
            android:gravity="end"
            android:textAlignment="viewEnd"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorAccent">

    </View>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/_7"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn8"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/_8"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn9"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/_9"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDiv"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/div"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/_4"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn5"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/_5"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn6"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/_6"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMult"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/mult"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/_1"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/_2"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/_3"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMod"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/modulus"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDot"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/dot"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn0"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/_0"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/minus"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/plus"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnClear"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorWhite"
            android:text="@string/c"
            android:textSize="24sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnequal"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="1dp"
            android:layout_weight="0.2"
            android:background="@color/colorgreen"
            android:text="@string/equal"
            android:textColor="@color/colorWhite"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>